[package]
name = "luminara"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[workspace]
members = ["crates/input_lib", "crates/macroquad_ex_ui"]

[workspace.dependencies]
macroquad = "0.4.14"

[dependencies]
arrayvec = "0.7.6"
hecs = "0.10.5"
indexmap = "2.10.0"
input_lib = { version = "0.1.0", path = "crates/input_lib" }
macroquad.workspace = true

[profile.android-dev]
inherits = "dev"

[profile.android-release]
inherits = "release"

[profile.web-release]
inherits = "release"
