[package]
name = "luminara"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[workspace]
members = ["crates/input_lib", "crates/macroquad_ex_ui", "crates/shade"]

[workspace.dependencies]
macroquad = "0.4.14"

[dependencies]
input_lib = { version = "0.1.0", path = "crates/input_lib" }
macroquad.workspace = true
shade = { version = "0.1.0", path = "crates/shade" }

[profile.android-dev]
inherits = "dev"

[profile.android-release]
inherits = "release"
opt-level = 3
lto = "thin"

[profile.web-release]
inherits = "release"
opt-level = "s"
lto = "thin"
